@@ -1,3 +1,12 @@
+1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Symbol.h: Constify argument to raiseEvent (Warning, Error_c,
+	EventType).
+
+	* DefObject.m (notifyDisplayName): Cast insert: displayName
+	argument to id.
+	(notifyDisplayName): Cast freeBlock: displayName argument to void *.
+w
 1997-12-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* DefObject.m (xsetname): Add braces to pacify GCC.
